data/derived/sp14/progs/unify/prog0861.ml.out
Characters 202-206:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type int * int
       but an expression was expected of type int
